@@ -7,6 +7,7 @@ import static com.scaling.libraryservice.search.util.TitleType.TOKEN_COMPLEX;
 
 import com.querydsl.core.BooleanBuilder;
 import com.querydsl.core.types.dsl.Expressions;
+import com.querydsl.core.types.dsl.NumberExpression;
 import com.querydsl.core.types.dsl.NumberTemplate;
 import com.querydsl.core.types.dsl.StringPath;
 import com.querydsl.jpa.impl.JPAQuery;
@@ -17,6 +18,8 @@ import com.scaling.libraryservice.search.util.SearchMode;
 import com.scaling.libraryservice.search.util.TitleQuery;
 import com.scaling.libraryservice.search.util.TitleTrimmer;
 import com.scaling.libraryservice.search.util.TitleType;
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -25,6 +28,7 @@ import org.springframework.stereotype.Repository;
 
 @RequiredArgsConstructor
 @Repository
+
 public class BookRepoQueryDsl implements BookRepository {
 
     private final JPAQueryFactory factory;
@@ -42,7 +46,7 @@ public class BookRepoQueryDsl implements BookRepository {
 
         // 최종적으로 페이징 처리된 도서 검색 결과를 반환.
         return PageableExecutionUtils.getPage(
-            books.fetch().stream().map(BookDto::new).toList(),
+            books.fetch().stream().map(BookDto::new).collect(Collectors.toList()),
             pageable, () -> LIMIT_CNT);
     }
 
@@ -132,10 +136,10 @@ public class BookRepoQueryDsl implements BookRepository {
             function, colum, name);
     }
 
-    private JPAQuery<Long> countQueryAll() {
+    private JPAQuery<Long> countQueryAll(NumberExpression<Long> expression) {
 
         return factory
-            .select(book.count())
+            .select(expression)
             .from(book);
     }
 
@@ -150,7 +154,20 @@ public class BookRepoQueryDsl implements BookRepository {
 
         return PageableExecutionUtils.getPage(
             books.fetch(),
-            pageable, () -> countQueryAll().fetchOne());
+            pageable, () -> countQueryAll(book.count()).fetchOne());
+    }
+
+    public Page<String> findTitleToken(Pageable pageable){
+
+        JPAQuery<String> books = factory
+            .select(book.titleToken)
+            .from(book)
+            .offset(pageable.getOffset())
+            .limit(pageable.getPageSize());
+
+        return PageableExecutionUtils.getPage(
+            books.fetch(),
+            pageable, () -> countQueryAll(book.titleToken.count()).fetchOne());
     }
 
 }
